deleted extra css file, moved footer to bottom of page, added title h1 back to the page, fixed background image alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
+* {
+  box-sizing: border-box;
+}
 html {
+  background-image: url("../img/pexels-mike-van-schoonderwalt-5505122.jpg");
+  background-position: 100vw 100vh;
+  background-size: cover;
   font-size: 16px;
   font-family: "Press Start 2P", cursive;
-  background-image: url("../img/pexels-mike-van-schoonderwalt-5505122.jpg");
-  background-position: center;
-  
-  background-size: cover;
+  /* border: 2px red solid; */
 }
+
 
 /*--------- General Styles -----------*/
 
@@ -18,11 +22,16 @@ h1 {
 }
 
 footer {
-  margin-top: 50px;
   display: flex;
   justify-content: center;
-  align-content: center;
-  flex-direction: row;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  /* align-content: center; */
 }
 
 footer p {
@@ -111,14 +120,6 @@ button {
 
   h1 {
     text-align: center;
-  }
-
-  footer {
-    margin-top: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-content: flex-end;
-    flex-direction: row;
   }
 
   footer p {
